apitoken.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: preprod-apitoken-deployment
  namespace: preprod
spec:
  selector:
    matchLabels:
      app: apitoken
  replicas: 1
  template:
    metadata:
      labels:
        app: apitoken
    spec:
      containers:
      - name: apitoken
        image: sathish8329/apitoken:v4
        ports:
        - containerPort: 8009
        livenessProbe:
          httpGet:
            path: /
            port: 8009
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8009
          initialDelaySeconds: 10
          periodSeconds: 10 
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: preprod-apitoken-service
  namespace: preprod
spec:
  selector:
    app: apitoken
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8009
  type: NodePort
