auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment-preprod
  namespace: preprod  # Specify the namespace here
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: auth   
  template:
    metadata:
      labels:
        app: auth
    spec:
      nodeSelector:                            # Correct indentation for nodeSelector
        eks.amazonaws.com/nodegroup: preprod-private    # Specify the node group name
      containers:
      - name: auth
        image: sathish8329/authpreprod:v1
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /auth
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3        
        readinessProbe:  # Add readiness probe
          httpGet:
            path: /auth
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 5  # Set failure threshold to 3
      

---

apiVersion: v1
kind: Service
metadata:
  name: preprod-auth-service
  namespace: preprod  # Specify the namespace here
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
