backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment-preprod
  namespace: preprod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1      
  template:
    metadata:
      labels:
        app: api
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: stage-private
      containers:
      - name: api
        image: sathish8329/backendpreprod:3956
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /api
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api
            port: 8000
          initialDelaySeconds: 25
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: preprod-api-service
  namespace: preprod
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
