frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preprod-deployment
  namespace: preprod  # Specify the namespace here
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:                            # Correct indentation for nodeSelector
        eks.amazonaws.com/nodegroup: kovaion-spot-ng    # Specify the node group name    
      containers:
      - name: frontend
        image: sathish8329/frontendpreprod:2948
        ports:
        - containerPort: 5001
        readinessProbe:  # Add readiness probe
          httpGet:
            path: /
            port: 5001
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3  # Set failure threshold to 3
---
apiVersion: v1
kind: Service
metadata:
  name: preprod-frontend-service
  namespace: preprod  # Specify the namespace here
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: NodePort
