ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lowcode-ingress
  namespace: lowcode
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" # Set the maximum allowed request body size to 100 MB
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600" # Increase connect timeout to 10 minutes
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"    # Increase send timeout to 10 minutes
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"    # Increase read timeout to 10 minutes
spec:
  rules:
  - host: "*.kovaion.ai"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: lowcode-api-service
            port:
              number: 8000
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: lowcode-auth-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lowcode-frontend-service
            port:
              number: 5001

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kovaionai-onboarding
  namespace: lowcode
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" # Set the maximum allowed request body size to 100 MB
spec:
  rules:
  - host: "kovaion.ai"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: onboarding-service-lowcode
            port:
              number: 5001
---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kovaionai-onboarding-www
  namespace: lowcode
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" # Set the maximum allowed request body size to 100 MB
spec:
  rules:
  - host: "www.kovaion.ai"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: onboarding-service-lowcode
            port:
              number: 3000
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: lowcode-api-service
            port:
              number: 8108
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lowcode-ingress-https
  namespace: lowcode
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" # Set the maximum allowed request body size to 100 MB
spec:
  rules:
  - host: "varahi.lionsms.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lowcode-frontend-service
            port:
              number: 5001
  tls:
  - hosts:
    - varahi.lionsms.com
    secretName: varahi-lowcode-lionsms-com-tls

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: engage-ingress-https
  namespace: lowcode
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" # Set the maximum allowed request body size to 100 MB
spec:
  rules:
  - host: "engage.kovaion.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lowcode-frontend-service
            port:
              number: 5001
  tls:
  - hosts:
    - engage.kovaion.com
    secretName: engage-engage-kovaion-com-tls

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kovaimarathon-kovaion
  namespace: lowcode
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" # Set the maximum allowed request body size to 100 MB
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "kovaimarathon.kovaion.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lowcode-frontend-service
            port:
              number: 5001  

  tls:
  - hosts:
    - kovaimarathon.kovaion.org
    secretName: marathon-tls

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lowcode-apitoken-ingress
  namespace: lowcode
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" # Set the maximum allowed request body size to 100 MB
spec:
  rules:
  - host: "api.kovaion.ai"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lowcode-apitoken-service
            port:
              number: 80
